--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -45,7 +45,7 @@
       <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            Usuarios
+            Terceros
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" *ngFor="let opUsuario of usuarios" 
