--- a/src/app/cuadre-caja/cuadre-caja.component.html
+++ b/src/app/cuadre-caja/cuadre-caja.component.html
@@ -13,7 +13,7 @@
               Total facturas
             </div>
             <div class="col col-md-3">
-                 <input  class="form-control" [(ngModel)]="cuadreCajaVo.totalFacturas" readonly>
+                 <input  class="form-control" [(ngModel)]="cuadreCajaVo.total_facturas" readonly>
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -23,7 +23,7 @@
                 Doc. No impresos
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.documentosNoImpresos" readonly>
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.documentos_no_impresos" readonly>
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -103,7 +103,7 @@
                 Vr. en fajos
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.fajos">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.fajos" (blur)="calcularEnCaja()">
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -113,7 +113,7 @@
                 Moneda
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.moneda">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.moneda" (blur)="calcularEnCaja()">
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -123,7 +123,7 @@
                 Efectivo
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.efectivo">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.efectivo" (blur)="calcularEnCaja()" readonly> 
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -133,7 +133,7 @@
                 Cheques
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.cheques">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.cheques" (blur)="calcularEnCaja()" readonly>
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -143,7 +143,7 @@
                 Tarjetas de crédito y débito
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.tarjetas">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.tarjetas" (blur)="calcularEnCaja()" readonly>
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -153,7 +153,7 @@
                 Varios
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.varios">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.varios" (blur)="calcularEnCaja()">
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -163,7 +163,7 @@
                 Vales
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.vales">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.vales" (blur)="calcularEnCaja()" readonly>
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -173,7 +173,7 @@
                 Cartera
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.cartera">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.cartera" (blur)="calcularEnCaja()" readonly>
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -183,7 +183,7 @@
                 Gastado
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.gastado">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.gastado" (blur)="calcularEnCaja()"> 
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -193,7 +193,7 @@
                 Nomina
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.nomina">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.nomina" (blur)="calcularEnCaja()">
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -203,7 +203,7 @@
                 Descuento
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.descuento">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.descuento" (blur)="calcularEnCaja()">
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -213,7 +213,7 @@
                 Propina
             </div>
             <div class="col col-md-3">
-                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.propina">
+                  <input  class="form-control" [(ngModel)]="cuadreCajaVo.propina" (blur)="calcularEnCaja()">
               </div>
               <div class="col col-md-3"></div>
               <div class="col col-md-3"></div> 
@@ -225,7 +225,7 @@
             <div class="col col-md-3">
                 
               </div>
-              <div class="col col-md-3">  <input  class="form-control" [(ngModel)]="cuadreCajaVo.totalCaja"></div>
+              <div class="col col-md-3">  <input  class="form-control" [(ngModel)]="cuadreCajaVo.totalCaja" readonly></div>
               <div class="col col-md-3"></div> 
         </div>
         <div class="row">
@@ -242,7 +242,48 @@
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary">Limpiar</button>
       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-      <button type="button" class="btn btn-primary">Imprimir</button>
+      <button type="button" class="btn btn-primary ml-2" data-toggle="modal" data-target="#imprimirModal">
+        Imprimir
+      </button>
     </div>
   </div>
+
+   <!-- Modal imprimir-->
+   <div class="modal fade bd-example-modal-sm" id="imprimirModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+   aria-hidden="true">
+   <div class="modal-dialog modal-sm" role="document">
+     <div class="modal-content">
+       <div class="modal-header">
+         <h5 class="modal-title" id="exampleModalLabel">Imprimir Orden de trabajo</h5>
+         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+         </button>
+       </div>
+       <div class="modal-body">
+         <div class="form-row">
+           <div class="form-group col-md-12 col-sm-10" *ngFor="let imp of impresoraEmpresa">
+             {{imp.numero_impresora}}. {{imp.nombre_impresora}}
+           </div>
+         </div>
+         <div class="form-row">
+           <div class="form-group col-md-6 col-sm-10" >
+             Digite el número de impresora:
+           </div>
+           <div class="form-group col-md-6 col-sm-2" >
+             <input class="form-control" id="impresora" type="number" placeholder="Digite el número de impresora:" name="impresora" #impresora required>
+           </div>
+         </div>
+       </div>
+       <div class="modal-footer">
+         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+         <button type="button" class="btn btn-primary" (click)="imprimirOrden(impresora)">Imprimir</button>
+       </div>
+     </div>
+   </div>
+ </div>
+ <div class="col col-ms-1">
+    <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
+
+    </a>
+</div>
 </div>
