--- a/src/app/inventario-fisico/inventario-fisico.component.html
+++ b/src/app/inventario-fisico/inventario-fisico.component.html
@@ -1,3 +1,233 @@
-<p>
-  inventario-fisico works!
-</p>
+<app-menu></app-menu>
+<div class="container-fluid main">
+  <div class="form-row">
+    <h4 class="mt-3">Inventario Fisico</h4>
+  </div>
+  <br />
+  <div class="form-row">
+    <div class="form-group col-md-3 col-sm-12 ">
+      <button type="button" (click)="limpiar()" class="btn btn-primary" data-toggle="modal"
+        data-target="#crearProductoModal">
+        Crear Producto
+      </button>
+
+      <button type="button" class="btn btn-primary ml-2" id="siguiente"
+        (click)="teclaAnteriorSiguiente('siguiente')">Crear Grupo</button>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-7 col-sm-12 ">
+      {{mensaje}}
+    </div>
+  </div>
+  <br />
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Opciones</th>
+        <th scope="col">Producto</th>
+        <th scope="col">Cantidad</th>
+        <th scope="col">Costo</th>
+        <th scope="col">Publico</th>
+        <th scope="col">Impuesto %</th>
+        <th scope="col">Balanza</th>
+        <th scope="col">Cod. Barras</th>
+        <th scope="col">Promo</th>
+        <th scope="col">Publico Promo</th>
+        <th scope="col">Kg. promo</th>
+        <th scope="col">Utilidad Real</th>
+        <th scope="col">Diferencia</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let ordenes of productosAll">
+        <th scope="row">
+          <!-- Button trigger modal -->
+          <button type="button" #borrar (click)="seleccionarEliminarItem(ordenes)" id="borrar_{{ordenes.producto_id}}"
+            class="btn btn-secondary btn-sm" data-toggle="modal" (keyup)="controlTeclas($event,borrar)"
+            (focus)="indexFocus(ordenes)">
+            Eliminar
+          </button>
+        </th>
+        <td>
+          <input class="form-control " #nombre id="nombre_{{ordenes.producto_id}}" (focus)="indexFocus(ordenes)"
+            value="{{ordenes.nombre}}" (keydown.enter)="cambioPrecioLista(ordenes,nombre)"
+            (keydown.esc)="scapeTecla(this)" (keyup)="controlTeclas($event,nombre)">
+
+        </td>
+        <td> <input class="form-control " #canti id="cantidad_{{ordenes.producto_id}}" (focus)="indexFocus(ordenes)"
+            value="{{ordenes.cantidad}}" (keydown.enter)="cambioPrecioLista(ordenes,canti)"
+            (keydown.esc)="scapeTecla(this)" (keyup)="controlTeclas($event,canti)">
+        </td>
+        <td>
+          <input class="form-control " #costo id="costo_{{ordenes.producto_id}}" (focus)="indexFocus(ordenes)"
+            value="{{ordenes.costo}}" (keydown.enter)="cambioPrecioLista(ordenes,costo)"
+            (keydown.esc)="scapeTecla(this)" (keyup)="controlTeclas($event,costo)">
+        </td>
+        <td>
+          <input class="form-control " #publico id="publico_{{ordenes.producto_id}}" (focus)="indexFocus(ordenes)"
+            value="{{ordenes.costo_publico}}" (keydown.enter)="cambioPrecioLista(ordenes,publico)"
+            (keydown.esc)="scapeTecla(this)" (keyup)="controlTeclas($event,publico)">
+        </td>
+        <td>
+          <input class="form-control " #impuesto id="impuesto_{{ordenes.producto_id}}" (focus)="indexFocus(ordenes)"
+            value="{{ordenes.impuesto}}" (keydown.enter)="cambioPrecioLista(ordenes,impuesto)"
+            (keydown.esc)="scapeTecla(this)" (keyup)="controlTeclas($event,impuesto)">
+        </td>
+        <td>
+          <input class="form-control " #balanza id="balanza_{{ordenes.producto_id}}" (focus)="indexFocus(ordenes)"
+            value="{{ordenes.balanza}}" (keydown.enter)="cambioPrecioLista(ordenes,balanza)"
+            (keydown.esc)="scapeTecla(this)" (keyup)="controlTeclas($event,balanza)">
+        </td>
+        <td>
+          <input class="form-control " #barras id="barras_{{ordenes.producto_id}}" (focus)="indexFocus(ordenes)"
+            value="{{ordenes.codigo_barras}}" (keydown.enter)="cambioPrecioLista(ordenes,barras)"
+            (keydown.esc)="scapeTecla(this)" (keyup)="controlTeclas($event,barras)">
+        </td>
+        <td>
+          <input class="form-control " #promo id="promo_{{ordenes.producto_id}}" (focus)="indexFocus(ordenes)"
+            value="{{ordenes.promo}}" (keydown.enter)="cambioPrecioLista(ordenes,promo)"
+            (keydown.esc)="scapeTecla(this)" (keyup)="controlTeclas($event,promo)">
+        </td>
+        <td>
+          <input class="form-control " #publico_promo id="public_promo_{{ordenes.producto_id}}"
+            (focus)="indexFocus(ordenes)" value="{{ordenes.pub_promo}}"
+            (keydown.enter)="cambioPrecioLista(ordenes,publico_promo)" (keydown.esc)="scapeTecla(this)"
+            (keyup)="controlTeclas($event,publico_promo)">
+        </td>
+        <td>
+          <input class="form-control " #kg_promo id="kg_promo{{ordenes.producto_id}}" (focus)="indexFocus(ordenes)"
+            value="{{ordenes.kg_promo}}" (keydown.enter)="cambioPrecioLista(ordenes,kg_promo)"
+            (keydown.esc)="scapeTecla(this)" (keyup)="controlTeclas($event,kg_promo)">
+        </td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- crear producto Modal -->
+  <div class="modal fade" id="crearProductoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Crear Producto</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-6">
+              Primer nombre
+              <input class="form-control" id="nombreCliente" placeholder="* Nombres cliente" name="nombreCliente"
+                #nombreCliente required [(ngModel)]="productoNew.nombre">
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+              Grupo
+              <select id="grupo" name="grupoPV" #grupoPV placeholder=""
+                [(ngModel)]="productoNew.grupo_id" class="form-control">
+                <option value="">Seleccione</option>
+                <option *ngFor="let grupo of grupoList" [value]="grupo.grupo_id">
+                   {{grupo.nombre}}
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-6">
+              Proveedor
+              <select id="proveedor" name="proveedorPV" #proveedorPV placeholder=""
+                [(ngModel)]="productoNew.proveedor_id" class="form-control">
+                <option value="">Seleccione</option>
+                <option *ngFor="let proveedor of proveedorList" [value]="proveedor.proveedor_id">
+                  {{proveedor.nombre}}
+               </option>
+              </select>
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+              Marca
+              <select id="marca" name="marcaPV" #marcaPV placeholder=""
+                [(ngModel)]="productoNew.marca_id" class="form-control">
+                <option value="">Seleccione</option>
+                <option *ngFor="let marca of marcaList" [value]="marca.marca_id">
+                   {{marca.nombre}}
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-6">
+              Precio de compra
+              <input class="form-control" id="costo" placeholder="* Precio de compra"
+              name="costoPV" #costoPV required [(ngModel)]="productoNew.costo">
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+              Precio de venta
+              <input class="form-control" id="costoPublicoPV" placeholder="* Precio de venta"
+              name="costoPublicoPV" #costoPublicoPV required [(ngModel)]="productoNew.costo_publico">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-6">
+              Impuesto
+              <input class="form-control" id="impuestoPV" placeholder="Iva o Ipoconsumo"
+              name="impuestoPV" #impuestoPV required [(ngModel)]="productoNew.impuesto">
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+              Stock Mínimo
+              <input class="form-control" id="stockMin" placeholder="Stock mínimo" name="stockMin" #stockMin
+                required [(ngModel)]="productoNew.stock_min">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-6">
+              Stock Máximo
+              <input class="form-control" id="celular" placeholder="Stock Máximo" name="stockMax" #stockMax required
+                [(ngModel)]="productoNew.stock_max">
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+              Codigo de barras
+              <input class="form-control" id="codBarrasPv" placeholder="Codigo de barras" name="codBarrasPv"
+                #codBarrasPv required [(ngModel)]="productoNew.codigo_barras">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-6">
+              Peso
+              <input class="form-control" id="peso"  placeholder="peso"
+                name="peso" #peso required [(ngModel)]="productoNew.peso">
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-3 col-sm-6">
+              Balanza
+              <input class="form-control" id="BalanzaPV"  placeholder="1 o 0"
+                name="peso" #peso required [(ngModel)]="productoNew.peso">
+            </div>
+            <div class="form-group col-md-3 col-sm-6">
+              Varios
+              <input class="form-control" id="varios"  placeholder="1 o 0"
+                name="varios" #varios required [(ngModel)]="productoNew.varios">
+            </div>
+            <div class="form-group col-md-3 col-sm-6">
+              Sub producto
+              <input class="form-control" id="subproducto"  placeholder="1 o 0"
+                name="subproducto" #subproducto required [(ngModel)]="productoNew.sub_producto">
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" (click)="CrearProducto()">Crear</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
