--- a/src/app/inventario-fisico/inventario-fisico.component.html
+++ b/src/app/inventario-fisico/inventario-fisico.component.html
@@ -12,7 +12,7 @@
       </button>
 
       <button type="button" class="btn btn-primary ml-2" id="siguiente"
-        (click)="teclaAnteriorSiguiente('siguiente')">Crear Grupo</button>
+        >Crear Grupo</button>
     </div>
   </div>
   <div class="form-row">
