--- a/src/app/ventas-dia/ventas-dia.component.html
+++ b/src/app/ventas-dia/ventas-dia.component.html
@@ -99,7 +99,7 @@
                 (keyup)="controlTeclas($event,buscarPV)" (keyup.enter)="enterTecla(buscarPV)">Buscar</button>
         </div>
         <div class="form-group col-md-1 col-sm-4" id="divModificar" #divModificar>
-            <button type="button" class="btn btn-primary btn-sm" id="modificarPV" #modificarPV (click)="modificarEnter(modificarPV)"
+            <button type="button" class="btn btn-primary btn-sm" id="modificarPV" #modificarPV (click)="modificarEnter()"
                 (keyup)="controlTeclas($event,modificarPV)" (keyup.enter)="enterTecla(modificarPV)">Modificar</button>
         </div>
         <div class="form-group col-md-1 col-sm-4" id="divNueva" #divNueva>
