se agrega desarrollo de gramera en punto de venta dia

--- a/src/app/inventario-fisico/inventario-fisico.component.html
+++ b/src/app/inventario-fisico/inventario-fisico.component.html
@@ -208,7 +208,7 @@
             <div class="form-group col-md-3 col-sm-6">
               Balanza
               <input class="form-control" id="BalanzaPV"  placeholder="1 o 0"
-                name="peso" #peso required [(ngModel)]="productoNew.peso">
+                name="peso" #peso required [(ngModel)]="productoNew.balanza">
             </div>
             <div class="form-group col-md-3 col-sm-6">
               Varios
