--- a/src/app/ventas-dia/ventas-dia.component.html
+++ b/src/app/ventas-dia/ventas-dia.component.html
@@ -449,4 +449,14 @@
         aria-hidden="true">
         <app-cuadre-caja></app-cuadre-caja>
     </div>
+
+      <button type="button" class="btn btn-primary d-none" id="buscarDocumentoXFecha" #buscarDocumentoXFecha data-toggle="modal"
+      data-target="#buscarDocumentoXFech">
+      Launch demo modal
+  </button>
+  <!-- Modalbuscar documentos -->
+  <div class="modal fade" id="buscarDocumentoXFech" tabindex="-1" role="dialog" aria-labelledby="cuadreCajaModalLabel"
+      aria-hidden="true">
+      <app-buscar-documentos></app-buscar-documentos>
+  </div>
 </div>
